--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <hr>
     <ol>
         <li><a href="example/helloworld.html">Hello World Vue</a></li>
+        <li><a href="example/v-if.html">v-if&v-else&v-show</a></li>
     </ol>
    
 </body>
