--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <h1>Vue2.0实例</h1>
 <hr>
+<h3>season 1</h3>
 <ol>
     <li><a href="/example/helloworld.html">Hello World 实例</a></li>
     <li><a href="/example/v-if.html">v-if & v-else & v-show</a></li>
@@ -16,6 +17,19 @@
     <li><a href="/example/v-model.html">v-model 数据源绑定</a></li>
     <li><a href="/example/v-bind.html">v-bind</a></li>
     <li><a href="/example/others.html">v-pre & v-cloak & v-once</a></li>
+</ol>
+<hr>
+<h3>season 2</h3>
+<ol>
+    <li><a href="/example/vue-directive.html">Vue.directive 自定义指令</a></li>
+    <li><a href="/example/vue-extend.html">Vue.extend 构造器的延伸</a></li>
+    <li><a href="/example/vue-set.html">Vue.set 全局操作</a></li>
+    <li><a href="/example/vue-live.html">Vue.live 构造器的生命周期</a></li>
+    <li><a href="/example/template.html">Template制作模板</a></li>
+    <li><a href="/example/vue-component.html">Component 初识组件</a></li>
+    <li><a href="/example/vue-component2.html">Component组件props属性设置</a></li>
+    <li><a href="/example/vue-component3.html">Component父子组件关系</a></li>
+    <li><a href="/example/vue-component4.html">Component标签</a></li>
 </ol>
 </body>
 </html>
