--- a/example/globalApi/template.html
+++ b/example/globalApi/template.html
@@ -11,13 +11,20 @@
      <div id="app">
         {{message}}
     </div>
-
+    <template id="dome2">
+        <h2 style="color: brown">这不是模板</h2>
+    </template>
+    <script type="x-template" id="demo3">
+        <h2 style="color:red">我是script标签模板</h2>
+    </script>
     <script type="text/javascript">
         var app = new Vue({
             el: '#app',
             data: {
                 message: 'Hello World Vue!'
-            }
+            },
+            // template:`<h1 style="color:red">这里没有模板</h1>`
+            template:"#demo3"
         })
     </script>
 </body>
