--- a/index.html
+++ b/index.html
@@ -31,5 +31,15 @@
     <li><a href="/example/vue-component3.html">Component父子组件关系</a></li>
     <li><a href="/example/vue-component4.html">Component标签</a></li>
 </ol>
+<hr>
+<h3>season 2</h3>
+<ol>
+    <li><a href="/example/propsDataOption.html">propsData Option 全局扩展的数据传递</a></li>
+    <li><a href="/example/computedOption.html">computed Option 计算选项</a></li>
+    <li><a href="/example/methodsOption.html">computed Option 方法选项</a></li>
+    <li><a href="/example/watch.html">watch 选项 监控数据</a></li>
+    <li><a href="/example/mixins.html">Mixins 混入选项操作</a></li>
+    <li><a href="/example/extendsOption.html">Extends Option 扩展选项</a></li>
+</ol>
 </body>
 </html>
