--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Vue.js  demo</title>
+   
+    <title>Vue.js实例</title>
 </head>
 <body>
-    <h1>Vue2.0 Demo</h1>
+    <h1>Vue2.0实例</h1>
     <hr>
     <ol>
-        <li><a href="example/helloworld.html">Hello World Vue</a></li>
+        <li><a href="/example/helloWorld.html">helloWorld实例</a></li>
+        <li><a href="/example/v-if.html">v-if&else&show</a></li>   
+        <li><a href="/example/v-for.html">v-for</a></li>   
+        <li><a href="/example/v-text&v-html.html">v-text&v-htmlr</a></li>   
+        <li><a href="/example/v-on.html">v-on</a></li>   
+        <li><a href="/example/v-model.html">v-model</a></li>   
+        <li><a href="/example/v-bind.html">v-bind</a></li>   
+        <li><a href="/example/other.html">other</a></li>   
     </ol>
-   
 </body>
 </html>
