--- a/example/v-if.html
+++ b/example/v-if.html
@@ -3,21 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HelloWorld</title>
+    <title>v-if&v-else&v-show</title>
     <script type="text/javascript" src="../assets/js/vue.js"></script>
 </head>
 <body>
-    <h1>HelloWorld</h1>
+    <h1>v-if&v-else&v-show</h1>
     <hr>
     <div id="app">
-        {{message}}
+        <div v-if="isLogin">你好，vue!</div>
+        <div v-else>请登录！</div>
+        <div v-show="isLogin">你好</div>
     </div>
 
     <script type="text/javascript">
         var app = new Vue({
             el:'#app',
             data:{
-                message:'hello world!1111'
+                isLogin:true
             }
         })
     </script>
