--- a/example/v-pre & v-cloak & v-once.html
+++ b/example/v-pre & v-cloak & v-once.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HelloWorld</title>
+    <title>v-pre & v-cloak & v-once</title>
     <script type="text/javascript" src="../assets/js/vue.js"></script>
 </head>
 <body>
-    <h1>HelloWorld</h1>
+    <h1>v-pre & v-cloak & v-once</h1>
     <hr>
     <div id="app">
-        {{message}}
+        <div v-pre>{{message}}</div>
+        <div v-cloak>渲染完成后，才显示！</div>
+        <div v-once>{{message}}</div>
+        <div><input type="text" v-model="message"></div>
+        <div>{{message}}</div>
     </div>
 
     <script type="text/javascript">
