--- a/example/v-text & v-html.html
+++ b/example/v-text & v-html.html
@@ -2,22 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HelloWorld</title>
     <script type="text/javascript" src="../assets/js/vue.js"></script>
+    <title>v-text & v-html 案例</title>
 </head>
 <body>
-    <h1>HelloWorld</h1>
+    <h1>v-text & v-html 案例</h1>
     <hr>
     <div id="app">
-        {{message}}
+        <span>{{ message }}</span>=<span v-text="message"></span><br/>
+        <span v-html="msgHtml"></span>
     </div>
-
+ 
     <script type="text/javascript">
-        var app = new Vue({
+        var app=new Vue({
             el:'#app',
             data:{
-                message:'hello world!1111'
+                message:'hello Vue!',
+                msgHtml:'<h2>hello Vue!</h2>'
             }
         })
     </script>
