--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Vue.js  demo</title>
+    <title>Vue-js实例</title>
 </head>
 <body>
-    <h1>Vue2.0 Demo</h1>
-    <hr>
-    <ol>
-        <li><a href="example/helloworld.html">Hello World Vue</a></li>
-    </ol>
-   
+<h1>Vue2.0实例</h1>
+<hr>
+<ol>
+    <li><a href="/example/helloworld.html">helloworld</a></li>
+    <li><a href="/example/v-if.html">v-if & v-else & v-show</a></li>
+    <li><a href="/example/v-for.html">v-for</a></li>
+    <li><a href="/example/v-text & v-html.html">v-text & v-html</a></li>
+    <li><a href="/example/v-on.html">v-on</a></li>
+    <li><a href="/example/v-model.html">v-model</a></li>
+    <li><a href="/example/v-bind.html">v-bind</a></li>
+    <li><a href="/example/v-pre & v-cloak & v-once.html">v-pre & v-cloak & v-once</a></li>
+</ol>
 </body>
 </html>
