--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <li><a href="/example/vue-component4.html">Component标签</a></li>
 </ol>
 <hr>
-<h3>season 2</h3>
+<h3>season 3</h3>
 <ol>
     <li><a href="/example/propsDataOption.html">propsData Option 全局扩展的数据传递</a></li>
     <li><a href="/example/computedOption.html">computed Option 计算选项</a></li>
@@ -40,6 +40,14 @@
     <li><a href="/example/watch.html">watch 选项 监控数据</a></li>
     <li><a href="/example/mixins.html">Mixins 混入选项操作</a></li>
     <li><a href="/example/extendsOption.html">Extends Option 扩展选项</a></li>
+</ol>
+<hr>
+<h3>season 4</h3>
+<ol>
+    <li><a href="example/earlyExamples.html">Early Examples</a></li>
+    <li><a href="example/examplesMethod.html">Examples Method</a></li>
+    <li><a href="example/examplesEvent.html">Examples Event</a></li>
+    <li><a href="example/slotContentExtend.html">Slot content extend</a></li>
 </ol>
 </body>
 </html>
