--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>Vue2.0实例</h1>
 <hr>
 <ol>
-    <h2>第一季</h2>
+    <h2>第一季：内部指令</h2>
     <li><a href="/example/helloworld.html">helloworld</a></li>
     <li><a href="/example/v-if.html">v-if & v-else & v-show</a></li>
     <li><a href="/example/v-for.html">v-for</a></li>
@@ -20,7 +20,7 @@
 </ol>
     <hr>
 <ol>
-        <h2>第二季</h2>
+        <h2>第二季：全局API</h2>
     <li><a href="/example/Vue.directive.html">Vue.directive自定义指令</a></li>
     <li><a href="/example/Vue.extend.html">Vue.extend扩展实例构造器</a></li>
     <li><a href="/example/Vue.set.html">Vue.set全局操作</a></li>
@@ -30,6 +30,16 @@
     <li><a href="/example/component_2.html">Component 组件props 属性设置</a></li>
     <li><a href="/example/component_3.html">Component 父子组件关系</a></li>
     <li><a href="/example/component_4.html">Component 标签</a></li>
+</ol>
+    <hr>
+<ol>
+    <h2>第三季：构造器里的选项</h2>
+    <li><a href="/example/propsDataOption.html">propsData Option 全局扩展的数据传递</a></li>
+    <li><a href="/example/computedOption.html">computed Option 计算选项</a></li>
+    <li><a href="/example/methodsOption.html">Methods Option 方法选项</a></li>
+    <li><a href="/example/watch.html">Watch 选项 监控数据</a></li>
+    <li><a href="/example/mixins.html">Mixins 混入选项操作</a></li>
+    <li><a href="/example/extendsOption.html">Extends Option 扩展选项</a></li>
 </ol>
 </body>
 </html>
