--- a/example/helloworld.html
+++ b/example/helloworld.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>HelloWorld</title>
     <script type="text/javascript" src="../assets/js/vue.js"></script>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>HelloWorld</h1>
     <hr>
-     <div id="app">
+    <div id="app">
         {{message}}
     </div>
 
     <script type="text/javascript">
-        var app = new Vue({
-            el: '#app',
-            data: {
-                message: 'Hello World Vue!'
+        var app=new Vue({
+            el:'#app',
+            data:{
+                message:'hello world!'
             }
-        })
+        } )
     </script>
 </body>
 </html>
